pxc/tests/test_007_constr/udempty2.px
import common -;
public namespace udempty2;

threaded struct foo(int i) {
  int iv = i;
  string sv = "hoge";
  function int m1(int i) {
    return iv + i + 100;
  }
}

threaded struct bar() {
  int x;
  foo f = foo(3); // ok. struct bar has constr
}

threaded struct baz {
  int x;
  foo f; // error
}

vector{bar} vb; # ok
bar b; # ok
baz bz; # error
println("ok");

